tests/fixtures/errors/e0201_non_const_bound.mimz
// expect: E0201
module M {
  in x: bits[4]
  out y: bits[4]
  repeat i: 0..x {
    y[i] = 0
  }
}
